<resources>
    <string name="app_name">FiveNightsEscape</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="health_3">Health: 3</string>
    <string name="stop">Stop</string>
    <string name="_00_00s">00:00s</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_donec_luctus_iaculis_dolor_quis_rutrum_nam_molestie_enim_sed_mi_sodales_ac_lacinia_quam_venenatis_etiam_ligula_orci_dapibus_ac_elit_id_consequat_maximus_ipsum_vivamus_sodales_metus_lectus_et_hendrerit_mi_scelerisque_vitae_pellentesque_habitant_morbi_tristique_senectus_et_netus_et_malesuada_fames_ac_turpis_egestas_nam_at_metus_dictum_lobortis_arcu_ut_ornare_leo_vestibulum_eros_est_accumsan_vel_orci_non_sodales_molestie_neque_maecenas_dignissim_tincidunt_massa_sed_facilisis_suspendisse_sit_amet_sapien_eu_lectus_ullamcorper_pulvinar_id_scelerisque_quam_aliquam_euismod_lacus_sed_porttitor_sagittis_nisl_lectus_interdum_sem_quis_gravida_nisl_nulla_non_leo_phasellus_facilisis_in_nisl_at_viverra_etiam_quis_ultrices_justo_ac_imperdiet_nibh_nunc_lacinia_ligula_in_enim_scelerisque_elementum_egestas_eros_elementum_in_sed_semper_risus_eget_tristique_magna_vivamus_tempus_vitae_purus_nec_tincidunt_pellentesque_at_varius_tortor_et_tempus_justo_curabitur_vulputate_iaculis_mi_cursus_posuere_nisl_mollis_pretium_in_ultricies_lacus_risus_et_lobortis_dolor_elementum_eget_donec_sit_amet_metus_eget_augue_interdum_malesuada_nec_vel_ex_pellentesque_venenatis_fermentum_orci_at_fringilla_dolor_fringilla_nec_pellentesque_volutpat_purus_id_ex_scelerisque_et_semper_nulla_semper_vivamus_id_libero_ut_arcu_porta_molestie_vestibulum_at_orci_vestibulum_id_tristique_elit_non_maximus_augue_sed_scelerisque_ligula_ac_nibh_accumsan_sit_amet_pharetra_ipsum_consectetur_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nam_sollicitudin_lorem_est_at_lacinia_massa_bibendum_vitae_pellentesque_at_risus_tempor_accumsan_nulla_aliquet_ultricies_ante_aenean_cursus_magna_et_elit_facilisis_laoreet_vitae_sed_nisl_vivamus_sodales_nec_lectus_sit_amet_pretium_nam_fermentum_suscipit_quam_nunc_velit_justo_tincidunt_ac_finibus_sit_amet_vestibulum_in_sem_nunc_id_tellus_ultricies_condimentum_urna_ut_malesuada_ante_curabitur_imperdiet_eros_vel_tincidunt_ultrices_aliquam_sed_justo_in_odio_fermentum_semper_morbi_fringilla_sapien_sed_leo_feugiat_suscipit_cras_lectus_diam_varius_ac_purus_vitae_fermentum_egestas_mauris_quisque_et_lacus_a_velit_mollis_luctus_ut_id_justo_vestibulum_rhoncus_massa_eget_faucibus_eleifend_ut_ut_interdum_orci_at_commodo_libero_praesent_tempor_mauris_nisi_at_euismod_tellus_euismod_id_in_quis_nulla_velit_curabitur_efficitur_purus_vitae_dolor_feugiat_euismod_phasellus_pharetra_gravida_sapien_quis_gravida_odio_porttitor_non_nulla_quis_est_nulla_quisque_id_vehicula_sem_sed_fringilla_augue_maecenas_mauris_lorem_vulputate_scelerisque_dapibus_eget_porttitor_ac_lorem_quisque_eu_aliquet_sapien_in_fermentum_magna_quisque_a_risus_sit_amet_tortor_condimentum_varius_mauris_ut_eros_eu_nisi_pellentesque_dictum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus iaculis dolor quis rutrum. Nam molestie enim sed mi sodales, ac lacinia quam venenatis. Etiam ligula orci, dapibus ac elit id, consequat maximus ipsum. Vivamus sodales metus lectus, et hendrerit mi scelerisque vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam at metus dictum, lobortis arcu ut, ornare leo. Vestibulum eros est, accumsan vel orci non, sodales molestie neque. Maecenas dignissim tincidunt massa sed facilisis. Suspendisse sit amet sapien eu lectus ullamcorper pulvinar id scelerisque quam. Aliquam euismod, lacus sed porttitor sagittis, nisl lectus interdum sem, quis gravida nisl nulla non leo. Phasellus facilisis in nisl at viverra. Etiam quis ultrices justo, ac imperdiet nibh. Nunc lacinia ligula in enim scelerisque, elementum egestas eros elementum. In sed semper risus, eget tristique magna. Vivamus tempus vitae purus nec tincidunt. Pellentesque at varius tortor, et tempus justo. Curabitur vulputate iaculis mi, cursus posuere nisl mollis pretium. In ultricies lacus risus, et lobortis dolor elementum eget. Donec sit amet metus eget augue interdum malesuada nec vel ex. Pellentesque venenatis fermentum orci, at fringilla dolor fringilla nec. Pellentesque volutpat purus id ex scelerisque, et semper nulla semper. Vivamus id libero ut arcu porta molestie vestibulum at orci. Vestibulum id tristique elit, non maximus augue. Sed scelerisque ligula ac nibh accumsan, sit amet pharetra ipsum consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin lorem est, at lacinia massa bibendum vitae. Pellentesque at risus tempor, accumsan nulla aliquet, ultricies ante. Aenean cursus magna et elit facilisis laoreet vitae sed nisl. Vivamus sodales nec lectus sit amet pretium. Nam fermentum suscipit quam. Nunc velit justo, tincidunt ac finibus sit amet, vestibulum in sem. Nunc id tellus ultricies, condimentum urna ut, malesuada ante. Curabitur imperdiet eros vel tincidunt ultrices. Aliquam sed justo in odio fermentum semper. Morbi fringilla sapien sed leo feugiat suscipit. Cras lectus diam, varius ac purus vitae, fermentum egestas mauris. Quisque et lacus a velit mollis luctus ut id justo. Vestibulum rhoncus massa eget faucibus eleifend. Ut ut interdum orci, at commodo libero. Praesent tempor mauris nisi, at euismod tellus euismod id. In quis nulla velit. Curabitur efficitur purus vitae dolor feugiat euismod. Phasellus pharetra gravida sapien, quis gravida odio porttitor non. Nulla quis est nulla. Quisque id vehicula sem, sed fringilla augue. Maecenas mauris lorem, vulputate scelerisque dapibus eget, porttitor ac lorem. Quisque eu aliquet sapien, in fermentum magna. Quisque a risus sit amet tortor condimentum varius. Mauris ut eros eu nisi pellentesque dictum.</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="start">Start</string>
</resources>