<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Google Map -->
    <FrameLayout
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity"
            tools:layout="@layout/activity_maps" />
    </FrameLayout>

    <!-- Timer -->
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_00_00s"
        android:textSize="20sp" />

    <!-- Health Indicator -->
    <TextView
        android:id="@+id/healthIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/health_3"
        android:textColor="#263238"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <!-- Stop Button -->
    <Button
        android:id="@+id/stopButton"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_width="320dp"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
