<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Scrollable Text -->
    <ScrollView
        android:id="@+id/scrollable_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/difficultyOptions"
        android:padding="16dp">

        <!-- Text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_donec_luctus_iaculis_dolor_quis_rutrum_nam_molestie_enim_sed_mi_sodales_ac_lacinia_quam_venenatis_etiam_ligula_orci_dapibus_ac_elit_id_consequat_maximus_ipsum_vivamus_sodales_metus_lectus_et_hendrerit_mi_scelerisque_vitae_pellentesque_habitant_morbi_tristique_senectus_et_netus_et_malesuada_fames_ac_turpis_egestas_nam_at_metus_dictum_lobortis_arcu_ut_ornare_leo_vestibulum_eros_est_accumsan_vel_orci_non_sodales_molestie_neque_maecenas_dignissim_tincidunt_massa_sed_facilisis_suspendisse_sit_amet_sapien_eu_lectus_ullamcorper_pulvinar_id_scelerisque_quam_aliquam_euismod_lacus_sed_porttitor_sagittis_nisl_lectus_interdum_sem_quis_gravida_nisl_nulla_non_leo_phasellus_facilisis_in_nisl_at_viverra_etiam_quis_ultrices_justo_ac_imperdiet_nibh_nunc_lacinia_ligula_in_enim_scelerisque_elementum_egestas_eros_elementum_in_sed_semper_risus_eget_tristique_magna_vivamus_tempus_vitae_purus_nec_tincidunt_pellentesque_at_varius_tortor_et_tempus_justo_curabitur_vulputate_iaculis_mi_cursus_posuere_nisl_mollis_pretium_in_ultricies_lacus_risus_et_lobortis_dolor_elementum_eget_donec_sit_amet_metus_eget_augue_interdum_malesuada_nec_vel_ex_pellentesque_venenatis_fermentum_orci_at_fringilla_dolor_fringilla_nec_pellentesque_volutpat_purus_id_ex_scelerisque_et_semper_nulla_semper_vivamus_id_libero_ut_arcu_porta_molestie_vestibulum_at_orci_vestibulum_id_tristique_elit_non_maximus_augue_sed_scelerisque_ligula_ac_nibh_accumsan_sit_amet_pharetra_ipsum_consectetur_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nam_sollicitudin_lorem_est_at_lacinia_massa_bibendum_vitae_pellentesque_at_risus_tempor_accumsan_nulla_aliquet_ultricies_ante_aenean_cursus_magna_et_elit_facilisis_laoreet_vitae_sed_nisl_vivamus_sodales_nec_lectus_sit_amet_pretium_nam_fermentum_suscipit_quam_nunc_velit_justo_tincidunt_ac_finibus_sit_amet_vestibulum_in_sem_nunc_id_tellus_ultricies_condimentum_urna_ut_malesuada_ante_curabitur_imperdiet_eros_vel_tincidunt_ultrices_aliquam_sed_justo_in_odio_fermentum_semper_morbi_fringilla_sapien_sed_leo_feugiat_suscipit_cras_lectus_diam_varius_ac_purus_vitae_fermentum_egestas_mauris_quisque_et_lacus_a_velit_mollis_luctus_ut_id_justo_vestibulum_rhoncus_massa_eget_faucibus_eleifend_ut_ut_interdum_orci_at_commodo_libero_praesent_tempor_mauris_nisi_at_euismod_tellus_euismod_id_in_quis_nulla_velit_curabitur_efficitur_purus_vitae_dolor_feugiat_euismod_phasellus_pharetra_gravida_sapien_quis_gravida_odio_porttitor_non_nulla_quis_est_nulla_quisque_id_vehicula_sem_sed_fringilla_augue_maecenas_mauris_lorem_vulputate_scelerisque_dapibus_eget_porttitor_ac_lorem_quisque_eu_aliquet_sapien_in_fermentum_magna_quisque_a_risus_sit_amet_tortor_condimentum_varius_mauris_ut_eros_eu_nisi_pellentesque_dictum"
            android:textSize="16sp"
            tools:ignore="VisualLintLongText" />
    </ScrollView>

    <!-- Difficulty Options -->
    <RadioGroup
        android:id="@+id/difficultyOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Radio Buttons for Easy, Medium, Hard -->
        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:text="@string/hard" />
    </RadioGroup>

    <!-- Start Button -->
    <Button
        android:id="@+id/startButton"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_width="320dp"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
